--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -43,15 +43,36 @@
             <li><a class="dropdown-item" href="/views/layouts/recipes/quick_and_easy/index_quick_and_easy.html">Quick & Easy</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/views/healthy_tips.html">Healthy Tips</a>
+        <!-- Healthy Tips Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="healthyTipsDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            Healthy Tips
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="healthyTipsDropdown">
+            <li><a class="dropdown-item" href="/views/healthy_tips.html">Healthy Tips</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/healthy_tips/kitchen_tips.html">Kitchen Tips</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/healthy_tips/articles.html">Health Articles</a></li>
+          </ul>
         </li>
+        
+        <!-- About Link -->
         <li class="nav-item">
           <a class="nav-link" href="/views/about.html">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/views/science.html">The Science</a>
+        
+        <!-- The Science Dropdown -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="scienceDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            The Science
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="scienceDropdown">
+            <li><a class="dropdown-item" href="/views/science.html">The Science</a></li>
+            <li><a class="dropdown-item" href="/views/layouts/recipes/science/science_articles.html">Science Articles</a></li>
+          </ul>
         </li>
+
       </ul>
 
     <form class="d-flex mx-auto search-width" onsubmit="handleSearch(event)">
