Fixed article pages

--- a/views/layouts/healthy_tips/articles.html
+++ b/views/layouts/healthy_tips/articles.html
@@ -63,10 +63,11 @@
 <div class="container py-4">
   <div class="d-flex justify-content-between">
     <div>
-      <select id="sort-options" class="form-select">
-        <option value="date">Sort by Date</option>
-        <option value="alphabetical">Sort by Alphabetical</option>
-      </select>
+        <label for="sort-options">Select sorting option:</label>
+        <select id="sort-options" class="form-select">
+            <option value="date">Sort by Date</option>
+            <option value="alphabetical">Sort by Alphabetical</option>
+        </select>
     </div>
     <div>
       <input type="text" id="search-input" class="form-control" placeholder="Search articles...">
