--- a/views/layouts/recipes/science/science_articles.html
+++ b/views/layouts/recipes/science/science_articles.html
@@ -63,6 +63,7 @@
         <div class="container py-4">
             <div class="d-flex justify-content-between">
                 <div>
+                    <label for="sort-options">Select sorting option:</label>
                     <select id="sort-options" class="form-select">
                         <option value="date">Sort by Date</option>
                         <option value="alphabetical">Sort by Alphabetical</option>
