Added sugar article and greek mtn tea

--- a/views/layouts/recipes/science/artificial_sweeteners.html
+++ b/views/layouts/recipes/science/artificial_sweeteners.html
@@ -171,44 +171,44 @@
                                             <p>References</p>
                                             <p>
                                                 1. Mooradian AD, Smith M, Tokuda M. The role of artificial and natural sweeteners in reducing the consumption of table
-                                                sugar: A narrative review. Clin Nutr ESPEN. 2017 Apr;18:1-8. doi:<a href="https://pubmed.ncbi.nlm.nih.gov/29132732/" target="_blank">10.1016/j.clnesp.2017.01.004</a>.
+                                                sugar: A narrative review. Clin Nutr ESPEN. 2017 Apr;18:1-8. doi:<a href="https://pubmed.ncbi.nlm.nih.gov/29132732/" target="_blank" rel="noopener">10.1016/j.clnesp.2017.01.004</a>.
                                             </p>
                                             <p>
                                                 2. Magnuson BA, Carakostas MC, Moore NH, Poulos SP, Renwick AG. Biological fate of low-calorie sweeteners. Nutr Rev. 2016
                                                 Nov;74(11):670-689. doi: <a href="https://pubmed.ncbi.nlm.nih.gov/27753624/"
-                                                    target="_blank">10.1093/nutrit/nuw032</a>.
+                                                    target="_blank" rel="noopener">10.1093/nutrit/nuw032</a>.
                                             </p>
                                             <p>
                                                 3. Le Roy, T., Clément, K. Bittersweet: artificial sweeteners and the gut microbiome. Nat Med 28, 2259–2260 (2022). doi: <a href="https://www.nature.com/articles/s41591-022-02063-z"
-                                                    target="_blank">10.1038/s41591-022-02063-z</a>.
+                                                    target="_blank" rel="noopener">10.1038/s41591-022-02063-z</a>.
                                             </p>
                                             <p>
                                                 4. Toews I, Lohner S, Küllenberg de Gaudry D, Sommer H, Meerpohl J J. Association between intake of non-sugar sweeteners and health outcomes: systematic review and meta-analyses of
                                                 randomised and non-randomised controlled trials and observational studies. 2019; doi: <a href="https://www.bmj.com/content/364/bmj.k4718"
-                                                    target="_blank">10.1136/bmj.k4718</a>.
+                                                    target="_blank" rel="noopener">10.1136/bmj.k4718</a>.
                                             </p>
                                             <p>
                                                 5. Artificial sweeteners produce the counterintuitive effect of inducing metabolic derangements
                                                 Swithers, Susan E.
-                                                <a href="https://www.cell.com/trends/endocrinology-metabolism/abstract/S1043-2760(13)00087-8?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS1043276013000878%3Fshowall%3Dtrue" target="_blank">Trends in Endocrinology & Metabolism, Volume 24, Issue 9, 431 - 441</a> 
+                                                <a href="https://www.cell.com/trends/endocrinology-metabolism/abstract/S1043-2760(13)00087-8?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS1043276013000878%3Fshowall%3Dtrue" target="_blank" rel="noopener">Trends in Endocrinology & Metabolism, Volume 24, Issue 9, 431 - 441</a> 
                                             </p>
                                             <p>
                                                 6. Sylvetsky AC, Rother KI. Artificial sweetener use and metabolic health. Physiology & Behavior. 2018; doi:
-                                                <a href="https://doi.org/10.1016/j.physbeh.2017.11.021" target="_blank">10.1016/j.physbeh.2017.11.021</a>.
+                                                <a href="https://doi.org/10.1016/j.physbeh.2017.11.021" target="_blank" rel="noopener">10.1016/j.physbeh.2017.11.021</a>.
                                             </p>
                                             <p>
                                                 7. Yang Q. Gain weight by "going diet?". Yale Journal of Biology and Medicine. 2010; doi: <a
-                                                    href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2892765/" target="_blank">PMC2892765</a>.
+                                                    href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2892765/" target="_blank" rel="noopener">PMC2892765</a>.
                                             </p>
                                             <p>
                                                 8. Weihrauch MR, Diehl V. Artificial sweeteners--do they bear a carcinogenic risk? Ann Oncol. 2004 Oct;15(10):1460-5. doi:
-                                                <a href="https://pubmed.ncbi.nlm.nih.gov/15367404/" target="_blank">10.1093/annonc/mdh256</a>. PMID: 15367404.
+                                                <a href="https://pubmed.ncbi.nlm.nih.gov/15367404/" target="_blank" rel="noopener">10.1093/annonc/mdh256</a>. PMID: 15367404.
                                             </p>
                                             <p>
                                                 9. Saraiva A, Carrascosa C, Raheem D, Ramos F, Raposo A. Natural Sweeteners: The Relevance of Food Naturalness for
                                                 Consumers, Food Security Aspects, Sustainability and Health Impacts. Int J Environ Res Public Health. 2020 Aug
                                                 28;17(17):6285. doi: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7504156/"
-                                                    target="_blank">10.3390/ijerph17176285</a>.
+                                                    target="_blank" rel="noopener">10.3390/ijerph17176285</a>.
                                             </p>
                                         </div>
                                     </div>
