--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -23,6 +23,13 @@ main {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+.main-content-container {
+    background-color: rgba(255, 255, 255, 0.95);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
 /* NAVBAR */
 /* Custom Navbar Background Color */
 .navbar {
