--- a/public/styles/science.css
+++ b/public/styles/science.css
@@ -24,3 +24,10 @@
     text-align: center;
     /* Center the text */
 }
+
+.half-size {
+    max-width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
