Adjusting pictures on mobile need to add clickable open

--- a/public/styles/science.css
+++ b/public/styles/science.css
@@ -31,3 +31,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Adjust for mobile devices */
+@media only screen and (max-width: 600px) {
+    .half-size {
+        max-width: 80%;
+    }
+}
