--- a/views/layouts/recipes/science/sugar_full.html
+++ b/views/layouts/recipes/science/sugar_full.html
@@ -147,7 +147,7 @@
                                 the same impact on health.</em></small>
                         <br>
                         Source: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8792817/"
-                            target="_blank" rel="noopener">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8792817/</a>
+                            target="_blank" rel="noopener">PMC8792817</a>
                     </figcaption>
                 </figure>
     
